Update Check Divisible 5 10 15.html

--- a/AsnJS/Check Divisible 5 10 15.html
+++ b/AsnJS/Check Divisible 5 10 15.html
@@ -15,7 +15,7 @@ document.write(a+" Is Not Divisible by 5,10,15 ");
 </head>
 <body>
     <br><br>
-    <a href="Grade By %.html">Next Grade By %</a>
+    <a href="Grade By per.html">Next Grade By %</a>
 </body>
 
 </html>
